--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     window.$docsify = {
       name: '« Résistez, faites des observations » — Jean Peneff',
       loadSidebar: true,
+      subMaxLevel: 2,
+      auto2top: true,
       repo: ''
     }
   </script>
